<resources>
    <string name="app_name">Register Login App</string>
    <string name="you_have_an_account_sign_here">You Have An Account? Sign Here</string>
    <string name="no_account_yet_register_here">No Have Account? Register Here</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
</resources>